--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/luxon": "^3.7.1",
     "@types/multer": "^1.4.12",
     "@types/node-cron": "^3.0.11",
     "agenda": "^5.0.0",
@@ -28,6 +29,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.2",
     "mongoose": "^8.14.0",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^4.2.1",
@@ -44,6 +46,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.11.24",
     "@types/nodemailer": "^6.4.14",
@@ -51,7 +54,9 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
+    "jest": "^30.1.3",
     "nodemon": "^3.1.10",
+    "ts-jest": "^29.4.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
