--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.20",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.24",
     "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
