--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
-    "version": 2,
+    "version": 3,
     "builds": [
         {
-            "src": "server.js",
+            "src": "dist/server.js",
             "use": "@vercel/node",
             "config": {
                 "includeFiles": [
-                    "dist/"
+                    "dist/**"
                 ]
             }
         }
@@ -14,7 +14,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "server.js"
+            "dest": "dist/server.js"
         }
     ]
 }
