--- a/.github/workflows/sync-db.yml
+++ b/.github/workflows/sync-db.yml
@@ -26,7 +26,7 @@ jobs:
             echo 'Restoring to development database...'
             mongorestore --uri='${{ secrets.MONGO_DEV_URI }}' --archive=/dump/dump.gz --gzip --drop
 
-            echo 'Restoring to RICKEY's database...'
+            echo 'Restoring to RICKEY database...'
             mongorestore --uri='${{ secrets.MONGO_RICKEY_URI }}' --archive=/dump/dump.gz --gzip --drop
           "
 
